--- a/Pre-Processing_Dataset_2.py.ipynb
+++ b/Pre-Processing_Dataset_2.py.ipynb
@@ -90,8 +90,8 @@
     "\n",
     "def divide_epochs(E, e_len):\n",
     "    \"\"\" Divide\"\"\"\n",
-    "    if raw.times[-1] >= ep_length:\n",
-    "        events = _create_events(raw, ep_length)\n",
+    "    if raw.times[-1] >= e_len:\n",
+    "        events = _create_events(raw, e_len)\n",
     "    epochs = Epochs(raw, events=events, tmin=0, tmax=e_len) \n",
     "    return epochs"
    ]
