done with my part of pipeline (tested), done with temporal shuffling (untested)

--- a/Pre-Processing_Dataset_2.py.ipynb
+++ b/Pre-Processing_Dataset_2.py.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -392,10 +392,10 @@
     "## Temporal_Shuffling.py (Alfredo)\n",
     "Input:   E  - ds of mne epoch objects and labels <p>\n",
     "Output:  E_TS - Temporal Shuffling NumPy Dataset \n",
-    "Dimensions (c,  L,  |E_TS|)\n",
-    "\t\tc - #eeg channels in E * 3 (t, t’, t’’)\n",
-    "\t\tL = # samples = r  * 30\n",
-    "        |E_TS| = # epochs * 12\n",
+    "Dimensions (c,  L,  |E_TS|) <p>\n",
+    "\t\tc - #eeg channels in E * 3 (t, t’, t’’) <p>\n",
+    "\t\tL = # samples = r  * 30 <p>\n",
+    "        |E_TS| = # epochs * 12 <p>\n",
     "\t\n",
     "        Y_TS - Temporal Shuffling Labels of dimensions (1, |E_TS|)\n",
     "        Dimensions(Y_RP) = (|E_RP|, 1)\n",
@@ -408,8 +408,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def temporal_shuffling(f_epochs, T_pos, T_neg):\n",
-    "    "
+    "def temporal_shuffling(epochs, T_pos, T_neg):\n",
+    "    \"\"\" Builds a self-supervised (temporal shuffling) dataset of epochs \n",
+    "    \n",
+    "    Args:\n",
+    "        E - Numpy datset of time-series arrays\n",
+    "        T_pos - positive context to sample from\n",
+    "        T_neg - negative context to sample from\n",
+    "        \n",
+    "    Output:\n",
+    "        TS_dataset - Temporal Shuffling Dataset of dimensions (L, 4, s, c)\n",
+    "            L - # of samples = # of user * # of epochs per user * 6\n",
+    "            4 - sample1 + sample2 + sample3 + label_y\n",
+    "            s - # of eeg channels in each sample\n",
+    "            c - Samples per channel = 30s * 128Hz\n",
+    "        TS_labels - Temporal Shuffling labels of dimensions (1, L)\n",
+    "            for each y = {1: if sample1 < sample2 < sample3 and -1: otherwise}\n",
+    "            \"\"\"\n",
+    "    \n",
+    "    TS_dataset = np.array([])\n",
+    "    TS_labels = np.array([])\n",
+    "    ## need to add a variable here once our data is ready\n",
+    "    for user in range(1):\n",
+    "        for idx, sample1 in enumerate(epochs):\n",
+    "\n",
+    "            for _ in range(3):\n",
+    "                sample2_index = np.random.uniform(idx-T_pos, idx+T_pos)\n",
+    "                sample2 = epochs[sample2_index:, :, :]\n",
+    "                \n",
+    "                sample3_index_1 = np.random.uniform(0, idx-T_neg)\n",
+    "                sample3_index_2 = np.random.uniform(idx+T_neg, epochs.shape[0])\n",
+    "                sample3_index = np.random.uniform([sample3_index_1, sample3_index_2])\n",
+    "                sample3 = epochs[sample3_index, :, :]\n",
+    "                \n",
+    "                if sample1 < sample2 and sample2 < sample3:\n",
+    "                    y = 1\n",
+    "                else:\n",
+    "                    y = -1\n",
+    "                \n",
+    "                TS_sample = np.array([sample1, sample2, sample3])\n",
+    "                TS_dataset.append(TS_sample)\n",
+    "                TS_labels.appen(y)\n",
+    "                \n",
+    "            for _in range(3):\n",
+    "                sample1_index = np.random.uniform(idx-T_pos, idx+T_pos)\n",
+    "                sample1 = epochs[sample2_index:, :, :]\n",
+    "                \n",
+    "                sample2_index = np.random.uniform(idx-T_pos, idx+T_pos)\n",
+    "                sample2 = epochs[sample2_index:, :, :]\n",
+    "                \n",
+    "                if sample1 < sample2 and sample2 < sample3:\n",
+    "                    y = 1\n",
+    "                else:\n",
+    "                    y = -1\n",
+    "                \n",
+    "                TS_sample = np.array([sample1, sample2, sample3])\n",
+    "                TS_dataset.append(TS_sample)\n",
+    "                TS_labels.append(y)\n",
+    "\n",
+    "    return TS_dataset, TS_labels"
    ]
   }
  ],
