second part of pipeline, temporal shuffling, temporal positioning done and tested with toy dataset, awaiting .fif file for final testing

--- a/PPD2.ipynb
+++ b/PPD2.ipynb
@@ -229,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -404,26 +406,6 @@
    ],
    "source": [
     "data1 = __main__1()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8, 5, 3867)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data1.shape"
    ]
   },
   {
@@ -763,6 +745,13 @@
    "source": [
     "# Example\n",
     "RP_dataset[0], RP_labels[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### :)"
    ]
   },
   {
